style.css
@font-face {
  font-family: 'HBIOS-SYS';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/HBIOS-SYS.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Pretendard-Regular';
  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
  font-weight: 400;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  list-style: none;
}

a, a:active {
  text-decoration: none;
  color: #000;
}

body {
  position: relative;
  background: #f4f4f4;
  margin: 0 auto;
  height: 100%;
  cursor: default;
  padding: 4rem 8rem;
  font-family: 'Pretendard-Regular';
  color:#666666;
  font-weight: bold;
  max-width: 1024px;
}

img {
  cursor: pointer;
}

button:hover {
  color: #ffffff;
  background-color: #555eff;
  cursor: pointer;
}


/* container */

.container {
  margin: 0 auto;
  padding: 2rem 5rem;
  min-width: 768px;
  background-color: #fff;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}


/* header */

header {
  text-align: center;
}

header h1 {
  font-size: 2rem;
  color: #343A40;
  font-weight: 800;
  font-family: 'HBIOS-SYS';
}

/* preview */

.preview {
  margin: 2rem auto;
  width: 100%;
  padding: 1rem;
  aspect-ratio: 16/9;
  background-color: #d4d4d4;
  font-family: 'Pretendard-Regular';
}

.content_list {
  position: relative;
  width: 100%;
  height: 100%;
  color: #fff;
  text-align: center;
}

.title {
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
  font-weight: 500;
  font-size: 3.2rem;
}

.subtitle {
  position: absolute;
  display: inline-block;
  top: 65%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.45rem;
  border-top: 1px solid #ffffff;
  padding-top: 5px;
}

.subject {
  position: absolute;
  top: 95%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.4rem;
}

/* management */

.management {
  margin: 2rem 0 0;
}

.management__menu {
  font-family: 'HBIOS-SYS';
}

.inputs {
  display: flex;
  justify-content: space-between;
}

input {
  border: 1px solid #d4d4d4;
  border-radius: 10px;
  padding: 0 1rem;
  margin: 1rem 0;
  height: 2rem;
  width: 30%;
}

input::placeholder {
  color: #d4d4d4;
  font-style: italic;
}

.management__menu {
  display: flex;
  width: 100%;
  margin: 1rem 0;
  padding-bottom: 1rem;
  border-bottom: 1px solid #d4d4d4;
}

.management__menu__title {
  width: 11rem;
  margin: auto 0;
  font-size: 1.2rem;
}

.btns {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

.btn {
  border: none;
  background-color:#f4f4f4;
  border-radius: 1rem;
  color:#666666;
  width: 8rem;
  height: 2rem;
  padding: 0 1rem;
  transition: background-color 200ms ease, color 200ms ease, opacity 400ms ease, transform 400ms ease;
}

.selected {
  background-color: #555eff;
  color: #ffffff;
}

.master_panel {
  display: flex;
  justify-content: center;
  margin: 2rem 0;
}

.master_panel__btn {
  border: 1px solid #d4d4d4;
  width: 8rem;
  height: 2rem;
  margin: 0 1.5rem;
  border-radius: none;
  color:#666666;
  font-size: 1rem;
}

.save {
  background-color: #888888;
  color: #ffffff;
}


/* footer */

.copyright {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 3rem;
  line-height: 3rem;
  padding: 4rem;
  border-top: 1px solid #d4d4d4;
}

.copyright__image {
  width: 3rem;
  height: 3rem;
}

/* modal */
.hidden {
  visibility: hidden;
  opacity: 0;
}

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -54%);
  z-index: 100;
}

